// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip demo -- arrow 1`] = `
.c1.uc-fe-popover {
  position: absolute;
  left: -9999px;
  top: -9999px;
  z-index: 1030;
  display: block;
}

.c1.uc-fe-popover-hidden {
  display: none;
}

.c1.uc-fe-popover-animation-fade-enter,
.c1.uc-fe-popover-animation-fade-appear,
.c1.uc-fe-popover-animation-fade-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-fade-enter,
.c1.uc-fe-popover-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c1.uc-fe-popover-animation-fade-leave {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1.uc-fe-popover-animation-bounce-enter,
.c1.uc-fe-popover-animation-bounce-appear,
.c1.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-bounce-enter,
.c1.uc-fe-popover-animation-bounce-appear {
  -webkit-animation-name: gLWDmf;
  animation-name: gLWDmf;
}

.c1.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-name: dSExIX;
  animation-name: dSExIX;
}

.c1.uc-fe-popover-animation-zoom-enter,
.c1.uc-fe-popover-animation-zoom-appear,
.c1.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-zoom-enter,
.c1.uc-fe-popover-animation-zoom-appear {
  -webkit-animation-name: gDGwlq;
  animation-name: gDGwlq;
}

.c1.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-name: xUjnO;
  animation-name: xUjnO;
}

.c1.uc-fe-popover-animation-slide-up-enter,
.c1.uc-fe-popover-animation-slide-up-appear {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 0;
  -webkit-animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c1.uc-fe-popover-animation-slide-up-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 1;
  -webkit-animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomRight,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kuepuf;
  animation-name: kuepuf;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topRight,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bAmAeh;
  animation-name: bAmAeh;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kbwIVM;
  animation-name: kbwIVM;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bRXKvn;
  animation-name: bRXKvn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c8 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  word-break: keep-all;
  box-sizing: border-box;
  line-height: 12px;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #ffffff;
}

.c4 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c6 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c5 {
  margin-left: -6px;
  border-width: 0 6px 6px 6px;
  border-top-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3 {
  top: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c5 {
  top: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c5 {
  margin-left: -6px;
  border-width: 6px 6px 0 6px;
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3 {
  bottom: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c5 {
  bottom: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c5 {
  margin-top: -6px;
  border-width: 6px 0 6px 6px;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3 {
  right: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c5 {
  right: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c5 {
  margin-top: -6px;
  border-width: 6px 6px 6px 0;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3 {
  left: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c5 {
  left: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3 {
  left: 16px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c7 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3 {
  right: 10px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c7 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3 {
  top: 5px;
  margin-top: 0;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c7 {
  min-height: 22px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3 {
  bottom: 5px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c7 {
  min-height: 22px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3 {
  left: 50%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c7 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3 {
  top: 50%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c7 {
  min-height: 22px;
}

.c2 .c3 {
  border-color: #d2d6ea;
}

.c2 .c5 {
  border-color: #ffffff;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        Hover
      </button>
      <div>
        <div
          class="uc-fe-popover c1 uc-fe-tooltip-popup  uc-fe-popover-placement-topLeft "
        >
          <div>
            <div
              class="c2"
            >
              <span
                class="c3 c4"
              >
                <span
                  class="c5 c6"
                />
              </span>
              <div
                class="c7 c8"
              >
                <p>
                  tooltip message
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        Hover
      </button>
      <div>
        <div
          class="uc-fe-popover c1 uc-fe-tooltip-popup  uc-fe-popover-placement-topLeft "
        >
          <div>
            <div
              class="c2"
            >
              <div
                class="c7 c8"
              >
                <p>
                  tooltip message
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo -- placement 1`] = `
.c2.uc-fe-popover {
  position: absolute;
  left: -9999px;
  top: -9999px;
  z-index: 1030;
  display: block;
}

.c2.uc-fe-popover-hidden {
  display: none;
}

.c2.uc-fe-popover-animation-fade-enter,
.c2.uc-fe-popover-animation-fade-appear,
.c2.uc-fe-popover-animation-fade-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-fade-enter,
.c2.uc-fe-popover-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c2.uc-fe-popover-animation-fade-leave {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c2.uc-fe-popover-animation-bounce-enter,
.c2.uc-fe-popover-animation-bounce-appear,
.c2.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-bounce-enter,
.c2.uc-fe-popover-animation-bounce-appear {
  -webkit-animation-name: gLWDmf;
  animation-name: gLWDmf;
}

.c2.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-name: dSExIX;
  animation-name: dSExIX;
}

.c2.uc-fe-popover-animation-zoom-enter,
.c2.uc-fe-popover-animation-zoom-appear,
.c2.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-zoom-enter,
.c2.uc-fe-popover-animation-zoom-appear {
  -webkit-animation-name: gDGwlq;
  animation-name: gDGwlq;
}

.c2.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-name: xUjnO;
  animation-name: xUjnO;
}

.c2.uc-fe-popover-animation-slide-up-enter,
.c2.uc-fe-popover-animation-slide-up-appear {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 0;
  -webkit-animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c2.uc-fe-popover-animation-slide-up-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 1;
  -webkit-animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomRight,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kuepuf;
  animation-name: kuepuf;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topRight,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bAmAeh;
  animation-name: bAmAeh;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kbwIVM;
  animation-name: kbwIVM;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bRXKvn;
  animation-name: bRXKvn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c9 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  word-break: keep-all;
  box-sizing: border-box;
  line-height: 12px;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #ffffff;
}

.c5 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c7 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c6 {
  margin-left: -6px;
  border-width: 0 6px 6px 6px;
  border-top-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c4 {
  top: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c6 {
  top: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c6 {
  margin-left: -6px;
  border-width: 6px 6px 0 6px;
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c4 {
  bottom: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c6 {
  bottom: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c6 {
  margin-top: -6px;
  border-width: 6px 0 6px 6px;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c4 {
  right: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c6 {
  right: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c6 {
  margin-top: -6px;
  border-width: 6px 6px 6px 0;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c4 {
  left: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c6 {
  left: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c4 {
  left: 16px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c8,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c8 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c4 {
  right: 10px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c8,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c8 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c4 {
  top: 5px;
  margin-top: 0;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c8,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c8 {
  min-height: 22px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c4 {
  bottom: 5px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c8,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c8 {
  min-height: 22px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c4 {
  left: 50%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c8,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c8 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c4 {
  top: 50%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c8,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c8 {
  min-height: 22px;
}

.c3 .c4 {
  border-color: #d2d6ea;
}

.c3 .c6 {
  border-color: #ffffff;
}

.c1 {
  vertical-align: baseline;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-topLeft "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  topLeft
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-top "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  top
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-topRight "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  topRight
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-bottomLeft "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  bottomLeft
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-bottom "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  bottom
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-bottomRight "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  bottomRight
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-leftTop "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  leftTop
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-left "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  left
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-leftBottom "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  leftBottom
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-rightTop "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  rightTop
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-right "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  right
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ai uc-fe-button-icon c1"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-rightBottom "
        >
          <div>
            <div
              class="c3"
            >
              <span
                class="c4 c5"
              >
                <span
                  class="c6 c7"
                />
              </span>
              <div
                class="c8 c9"
              >
                <p>
                  rightBottom
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo -- style 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
      type="button"
    >
      Hover
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
      type="button"
    >
      Hover
    </button>
  </div>
</div>
`;

exports[`Tooltip demo -- theme 1`] = `
.c1.uc-fe-popover {
  position: absolute;
  left: -9999px;
  top: -9999px;
  z-index: 1030;
  display: block;
}

.c1.uc-fe-popover-hidden {
  display: none;
}

.c1.uc-fe-popover-animation-fade-enter,
.c1.uc-fe-popover-animation-fade-appear,
.c1.uc-fe-popover-animation-fade-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-fade-enter,
.c1.uc-fe-popover-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c1.uc-fe-popover-animation-fade-leave {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1.uc-fe-popover-animation-bounce-enter,
.c1.uc-fe-popover-animation-bounce-appear,
.c1.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-bounce-enter,
.c1.uc-fe-popover-animation-bounce-appear {
  -webkit-animation-name: gLWDmf;
  animation-name: gLWDmf;
}

.c1.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-name: dSExIX;
  animation-name: dSExIX;
}

.c1.uc-fe-popover-animation-zoom-enter,
.c1.uc-fe-popover-animation-zoom-appear,
.c1.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-zoom-enter,
.c1.uc-fe-popover-animation-zoom-appear {
  -webkit-animation-name: gDGwlq;
  animation-name: gDGwlq;
}

.c1.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-name: xUjnO;
  animation-name: xUjnO;
}

.c1.uc-fe-popover-animation-slide-up-enter,
.c1.uc-fe-popover-animation-slide-up-appear {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 0;
  -webkit-animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c1.uc-fe-popover-animation-slide-up-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 1;
  -webkit-animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomRight,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kuepuf;
  animation-name: kuepuf;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topRight,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bAmAeh;
  animation-name: bAmAeh;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kbwIVM;
  animation-name: kbwIVM;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bRXKvn;
  animation-name: bRXKvn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c8 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  word-break: keep-all;
  box-sizing: border-box;
  line-height: 12px;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #ffffff;
}

.c10 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  word-break: keep-all;
  box-sizing: border-box;
  line-height: 12px;
  color: #ffffff;
  border: 1px solid #0a1633;
  background: #0a1633;
}

.c4 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c6 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c5 {
  margin-left: -6px;
  border-width: 0 6px 6px 6px;
  border-top-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3 {
  top: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c5 {
  top: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c5 {
  margin-left: -6px;
  border-width: 6px 6px 0 6px;
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3 {
  bottom: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c5 {
  bottom: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c5 {
  margin-top: -6px;
  border-width: 6px 0 6px 6px;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3 {
  right: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c5 {
  right: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c5 {
  margin-top: -6px;
  border-width: 6px 6px 6px 0;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3 {
  left: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c5 {
  left: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3 {
  left: 16px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c7 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3 {
  right: 10px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c7 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3 {
  top: 5px;
  margin-top: 0;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c7 {
  min-height: 22px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3 {
  bottom: 5px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c7 {
  min-height: 22px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3 {
  left: 50%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c7 {
  min-width: 32px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3 {
  top: 50%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c7,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c7 {
  min-height: 22px;
}

.c2 .c3 {
  border-color: #d2d6ea;
}

.c2 .c5 {
  border-color: #ffffff;
}

.c9 .c3 {
  border-color: #0a1633;
}

.c9 .c5 {
  border-color: #0a1633;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        Hover
      </button>
      <div>
        <div
          class="uc-fe-popover c1 uc-fe-tooltip-popup  uc-fe-popover-placement-topLeft "
        >
          <div>
            <div
              class="c2"
            >
              <span
                class="c3 c4"
              >
                <span
                  class="c5 c6"
                />
              </span>
              <div
                class="c7 c8"
              >
                <p>
                  tooltip message
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        Hover
      </button>
      <div>
        <div
          class="uc-fe-popover c1 uc-fe-tooltip-popup  uc-fe-popover-placement-topLeft "
        >
          <div>
            <div
              class="c9"
            >
              <span
                class="c3 c4"
              >
                <span
                  class="c5 c6"
                />
              </span>
              <div
                class="c7 c10"
              >
                <p>
                  tooltip message
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo -- tooltip 1`] = `
.c21 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c21:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c9 > * {
  font-size: 12px;
}

.c9 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c9 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c9 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c9:hover .uc-fe-radio-icon-wrap,
.c9.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c9.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c9.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c9.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-htpNat:last-child {
  margin-right: 0;
}

.c7 .c23 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c23:last-child {
  margin-right: 0;
}

.c7 .c24+.c24 {
  margin-left: -1px;
}

.c7 .c22 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c22:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c22:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c14,
.c11 .c16 {
  line-height: 16px;
}

.c11 .c14 {
  padding-right: 20px;
}

.c11 .c16 {
  padding-left: 20px;
}

.c11 .c12 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c11 .c17 {
  left: 100%;
  margin-left: -19px;
}

.c11 .c19 {
  background: #4cd964;
}

.c11 .c16 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        placement
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              topLeft
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              top
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              topRight
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottomLeft
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottom
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottomRight
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              leftTop
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              left
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              leftBottom
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              rightTop
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              right
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              rightBottom
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        theme
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              light
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              dark
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        arrow
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          checked=""
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c21"
      type="button"
    >
      content
    </button>
  </div>
</div>
`;
